# AudienceLab

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  package-lock.json
.claude/agents/: instagram-user-crawler.md
.claude/commands/: crawl_instagram.md
agent/: .env.example  .env.sample  ACCOUNTS.md  README.md  accounts.py  cli.py  evaluator.py  local_agent.py  mcp_runner.py  personas.json  pyproject.toml  run_all.sh  runner.py  single_agent.py  test_mcp.py  test_multi_agent.py  test_single_agent.py
agent/outputs/: .gitignore  README.md  action-schema.json
agent/templates/: system_prompt.j2  user_prompt.j2
dashboard/: .gitignore  README.md  package-lock.json  package.json
dashboard/src/: App.tsx
docs/: AGENT_SKILLS.md  ARCHITECTURE.md  COST_ESTIMATION.md  EVALUATION.md  HACKATHON_STRATEGY.md  QUICKSTART.md  README.md  STRATEGY_DEFENSE.md  TROUBLESHOOTING.md
docs/components/: agent.md  crawler.md  dashboard.md  sns.md
docs/contracts/: simulation.md
eval-agent/: .env.sample  README.md  comment_quality_eval.csv  evaluate.py  evaluation_report.md  pyproject.toml
scripts/: deploy_dashboard_data.py  setup_sns.sh
search-dashboard/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
search-dashboard/src/: App.tsx  main.tsx
shared/: README.md  simulation-schema.json
shared/evaluation/: README.md  expected-schema.json  expected.example.json  result-schema.json
sns/: seed_hackathon.php
sns-vibe/: README.md  package-lock.json  package.json  seeds.json  sns.db
sns-vibe/scripts/: reset-db.sh
(+48 files in other folders)
